[metadata]
name = django-splint-kovs
version = 0.0.1
author = Silvio Moreto
author_email = silvio.moreto@medway.com.br
description = Simple package with utilities for projects with Django Framework
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires = 
    django>=2.2.11
    Pillow>=8.0.0
    djangorestframework>=3.11.0
    django-import-export>=2.4.0
    django-filter>=2.2.0

[options.packages.find]
where = src